--- a/index.html
+++ b/index.html
@@ -6,22 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--metatextblock-->
-    <title>Business page</title>
+    <title>Broadify</title>
     <meta name="description" content="A great example of how you can talk about your services">
-    <meta property="og:url" content="http://project5450174.tilda.ws/page27034556.html">
     <meta property="og:title" content="Business page">
     <meta property="og:description" content="A great example of how you can talk about your services">
     <meta property="og:type" content="website">
-    <meta property="og:image"
-        content="https://static.tildacdn.com/tild6335-3166-4166-a335-643939336261/-/resize/504x/workplace1245776_1920.jpg">
-    <link rel="canonical" href="http://project5450174.tilda.ws/page27034556.html">
     <!--/metatextblock-->
     <meta property="fb:app_id" content="257953674358265">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-dns-prefetch-control" content="on">
-    <link rel="dns-prefetch" href="https://ws.tildacdn.com/">
-    <link rel="dns-prefetch" href="https://static.tildacdn.com/">
-    <link rel="shortcut icon" href="https://static.tildacdn.com/img/tildafavicon.ico" type="image/x-icon">
     <!-- Assets -->
     <script type="text/javascript" async="" id="tildastatscript"
         src="./Business page_files/tilda-stat-1.0.min.js"></script>
